# amazon-thumbnail-fetcher

./: README.md  pyproject.toml
cdk/: .gitignore
cdk/lib/: cdk-stack.ts
src/amazon_thumbnail_fetcher/: __init__.py  lambda_handler.py
