[project]
name = "amazon-thumbnail-fetcher"
version = "0.1.0"
description = "Get the first thumbnail image of Amazon's search result."
authors = [
    { name = "zaki3mymy", email = "zaki.last@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=5.0.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/amazon_thumbnail_fetcher"]
